--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# Demo (temp)
+/module1_fundamentals/demo/weather-app-demo
+
 # compiled output
 /dist
 /tmp
