--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "m2.4": "reveal-md ./module2_frontend/m2.lesson04.md  --theme sky",
     "m2.5": "reveal-md ./module2_frontend/m2.lesson05.md  --theme night",
     "m2.6": "reveal-md ./module2_frontend/m2.lesson06.md  --theme solarized",
-    "m2.7": "reveal-md ./module2_frontend/m2.lesson07.md  --theme night",
-    "m2.8": "reveal-md ./module2_frontend/m2.lesson08.md  --theme night",
-    "m2.9": "reveal-md ./module2_frontend/m2.lesson09.md  --theme serif",
+    "m2.7": "reveal-md module2_frontend/m2.lesson09.md  --theme night",
+    "m2.8": "reveal-md module2_frontend/m2.lesson08.md  --theme night",
+    "m2.9": "reveal-md module2_frontend/m2.lesson09.md  --theme serif",
     "m2.10": "reveal-md ./module2_frontend/m2.lesson10.md  --theme serif",
     "m2.11": "reveal-md ./module2_frontend/m2.lesson11.md  --theme league",
     "m3.1": "reveal-md ./module3_backend/m3.lesson01.md  --theme solarized",
