--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "m2.9": "reveal-md module2_frontend/m2.lesson09.md  --theme serif",
     "m2.10": "reveal-md ./module2_frontend/m2.lesson10.md  --theme serif",
     "m2.11": "reveal-md ./module2_frontend/m2.lesson11.md  --theme league",
+    "m2.12": "reveal-md ./module2_frontend/m2.lesson12.md  --theme league",
+    "m2.13": "reveal-md ./module2_frontend/m2.lesson13.md  --theme sky",
+    "m2.14": "reveal-md ./module2_frontend/m2.lesson14.md  --theme night",
+    "m2.15": "reveal-md ./module2_frontend/m2.lesson15.md  --theme night",
+    "m2.16": "reveal-md ./module2_frontend/m2.lesson16.md  --theme simple",
     "m3.1": "reveal-md ./module3_backend/m3.lesson01.md  --theme solarized",
     "m3.2": "reveal-md ./module3_backend/m3.lesson02.md  --theme serif",
     "m3.3": "reveal-md ./module3_backend/m3.lesson03.md  --theme serif",
