--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "m3.4": "reveal-md ./module3_backend/m3.lesson04.md  --theme night",
     "m3.5": "reveal-md ./module3_backend/m3.lesson05.md  --theme night",
     "m3.6": "reveal-md ./module3_backend/m3.lesson06.md  --theme solarized",
-    "m3.7": "reveal-md ./module3_backend/m3.lesson07.md  --theme serif",
+    "m3.7": "reveal-md ./module3_backend/m3.lesson07.md  --theme league",
+    "m3.8": "reveal-md ./module3_backend/m3.lesson08.md  --theme night",
+    "m3.9": "reveal-md ./module3_backend/m3.lesson09.md  --theme night",
     "m4.1": "reveal-md ./module4_advanced_development/m4.lesson01.md  --theme serif",
     "m4.2": "reveal-md ./module4_advanced_development/m4.lesson02.md  --theme night",
     "m4.3": "reveal-md ./module4_advanced_development/m4.lesson03.md  --theme night",
